# gitmind

./: .gitignore  Cargo.toml  README.md  README_CN.md
src/: main.rs
src/analyzer/: mod.rs
src/generator/: mod.rs
src/scanner/: mod.rs
