[package]
name = "gitmind"
version = "0.1.0"
edition = "2024"
description = "Auto-generate AI context docs (AGENTS.md) for any codebase"
license = "MIT"
repository = "https://github.com/user/gitmind"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
chrono = "0.4"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
strip = true
